--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "BSD",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.9",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.1",
     "docco": "~0.6.2",
