--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.1",
-    "docco": "~0.6.2",
-    "grunt-shell": "~0.3.1"
+    "grunt-docco": "~0.3.0"
   }
 }
