--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "PIPlayer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Project Implicit Player",
-  "main": "src/js/main.js",
+  "main": "src/js/config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
