test harness in progress

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.1",
-    "grunt-docco": "~0.3.0"
+    "grunt-docco": "~0.3.0",
+    "selenium-webdriver": "~2.39.0"
+    //"chai": "~1.8.1",
+    //"mocha": "~1.16.1"
   }
 }
