--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-express": "~1.2.1",
     "jade": "~1.1.5",
     "marked": "~0.3.0",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "jshint": "^2.4.4"
   }
 }
