feat(API): update API to return a plain script, major changes to internal treatment of globals

--- a/.jshintrc
+++ b/.jshintrc
@@ -9,6 +9,7 @@
         "define": false,
         "require": false
     },
+    "-W099": true,
     "immed": true,
     "latedef": "nofunc",
     "laxcomma": true,
