--- a/.jshintrc
+++ b/.jshintrc
@@ -7,6 +7,7 @@
     "expr": true,
     "globals": {
         "define": false,
+        "requirejs": false,
         "require": false
     },
     "-W099": true,
