--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "PIPlayer",
   "version": "0.3.15",
+  "license": "Apache-2.0",
   "description": "Project Implicit Player",
   "scripts": {
     "build": "grunt build",
