--- a/0.3/package.json
+++ b/0.3/package.json
@@ -1,6 +1,7 @@
 {
   "name": "PIPlayer",
-  "version": "0.3.11",
+  "version": "0.3.16",
+  "license": "Apache-2.0",
   "description": "Project Implicit Player",
   "scripts": {
     "build": "grunt build",
