--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "bugs": "https://github.com/ProjectImplicit/PIPlayer/issues",
   "author": "Elad Zlotnick",
-  "license": "",
   "devDependencies": {
     "express": "~3.4.8",
     "grunt": "~0.4.3",
@@ -24,9 +23,9 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-jshint": "~0.6.1",
     "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-docco": "~0.3.1",
     "grunt-express": "~1.2.1",
+    "grunt-sass": "^1.1.0",
     "jade": "~1.1.5",
     "jshint": "^2.4.4",
     "marked": "~0.3.0",
