--- a/0.3/package.json
+++ b/0.3/package.json
@@ -1,13 +1,14 @@
 {
   "name": "PIPlayer",
-  "version": "0.3.22",
+  "version": "0.3.24",
   "license": "Apache-2.0",
   "description": "Project Implicit Player",
   "scripts": {
     "build": "grunt build",
     "start": "grunt server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install grunt-contrib-watch"
+    "postinstall": "npm install grunt-contrib-watch",
+    "version": "grunt version"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,6 @@
   },
   "bugs": "https://github.com/ProjectImplicit/PIPlayer/issues",
   "author": "Elad Zlotnick",
-  "license": "",
   "devDependencies": {
     "express": "~3.4.8",
     "grunt": "~0.4.3",
@@ -23,9 +23,9 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-jshint": "~0.6.1",
     "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-docco": "~0.3.1",
     "grunt-express": "~1.2.1",
+    "grunt-sass": "^1.1.0",
     "jade": "~1.1.5",
     "jshint": "^2.4.4",
     "marked": "~0.3.0",
