--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   },
   "scripts": {
     "build": "grunt build",
-    "start": "grunt server",
+    "start": "http-server . -p 3000 -o",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install grunt-contrib-watch",
     "gendocs": "minno-gendocs docs pages",
     "version": "grunt version"
   },
@@ -24,15 +23,14 @@
   "bugs": "https://github.com/ProjectImplicit/PIPlayer/issues",
   "author": "Elad Zlotnick",
   "devDependencies": {
-    "express": "~3.4.8",
     "grunt": "~0.4.3",
     "grunt-bump": "0.0.14",
     "grunt-cli": "~0.1.9",
     "grunt-contrib-jshint": "~0.6.1",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-docco": "~0.3.1",
-    "grunt-express": "~1.2.1",
     "grunt-sass": "^1.1.0",
+    "http-server": "^0.9.0",
     "jade": "~1.1.5",
     "jshint": "^2.4.4",
     "marked": "~0.3.0",
