refactor(stimulus): basicly works?

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "globals": {
         "require" : true,
         "requirejs" : true,
-        "define" : true
+        "define" : true,
+        "Promise" : true
     },
     "extends": "eslint:recommended"
 }
