fix(logger): retrieve global correctly

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "css": "file:src/utils/css",
     "fastdom": "^1.0.6",
     "lodash": "^3.10.1",
-    "mithril-stream": "^1.1.0",
-    "sequencer": "github:minnojs/minno-sequencer"
+    "minno-sequencer": "github:minnojs/minno-sequencer",
+    "mithril-stream": "^1.1.0"
   },
   "devDependencies": {
     "jasmine": "^2.8.0",
@@ -24,7 +24,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-rollup-preprocessor": "^5.0.1",
-    "rollup": "^0.50.0",
+    "rollup": "^0.51.5",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1"
