fix(e2e): added local server and improved cross evironment compatibility

--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "minno-time",
-  "version": "0.5.0",
-  "description": "",
-  "main": "dist/time.js",
-  "module": "src/index.js",
-  "scripts": {
-    "test": "karma start",
-    "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
-    "dev": "./node_modules/rollup/bin/rollup -c -w",
-    "e2e": "nightwatch"
-  },
-  "author": "",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "css": "file:src/utils/css",
-    "fastdom": "^1.0.6",
-    "lodash": "^3.10.1",
-    "minno-sequencer": "github:minnojs/minno-sequencer",
-    "mithril-stream": "^1.1.0"
-  },
-  "devDependencies": {
-    "jasmine": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-rollup-preprocessor": "^5.0.1",
-    "rollup": "^0.51.5",
-    "nightwatch": "^0.9.16",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "selenium-download": "^2.0.10"
-  }
+    "name": "minno-time",
+    "version": "0.5.0",
+    "description": "",
+    "main": "dist/time.js",
+    "module": "src/index.js",
+    "scripts": {
+        "postinstall": "node e2e/nightwatch.config.js",
+        "test": "karma start",
+        "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
+        "dev": "./node_modules/rollup/bin/rollup -c -w",
+        "e2e:debug": "node ./e2e/debug.js",
+        "e2e": "node ./e2e/runner.js"
+    },
+    "author": "",
+    "license": "Apache-2.0",
+    "dependencies": {
+        "css": "file:src/utils/css",
+        "fastdom": "^1.0.6",
+        "lodash": "^3.10.1",
+        "minno-sequencer": "github:minnojs/minno-sequencer",
+        "mithril-stream": "^1.1.0"
+    },
+    "devDependencies": {
+        "cross-env": "^5.1.1",
+        "express": "^4.16.2",
+        "jasmine": "^2.8.0",
+        "karma": "^1.7.1",
+        "karma-jasmine": "^1.1.0",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-rollup-preprocessor": "^5.0.1",
+        "nightwatch": "^0.9.16",
+        "rollup": "^0.51.5",
+        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-uglify": "^2.0.1",
+        "saucelabs": "^1.4.0",
+        "selenium-download": "^2.0.10"
+    }
 }
