--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "karma-phantomjs-launcher": "^1.0.4",
         "karma-rollup-preprocessor": "^5.0.1",
         "nightwatch": "^0.9.16",
+        "node-sauce-connect": "^4.4.91",
         "rollup": "^0.51.5",
         "rollup-plugin-commonjs": "^8.2.1",
         "rollup-plugin-node-resolve": "^3.0.0",
