--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
         "dev": "./node_modules/rollup/bin/rollup -c -w",
         "e2e:debug": "node ./e2e/debug.js",
-        "e2e": "node ./e2e/runner.js"
+        "e2e": "node ./e2e/runner.js",
+        "e2e:sauce": "node ./e2e/runner.js --sauce",
+        "surge": "surge --project ./ --domain minno-time-e2e.surge.sh"
     },
     "author": "",
     "license": "Apache-2.0",
@@ -30,12 +32,12 @@
         "karma-phantomjs-launcher": "^1.0.4",
         "karma-rollup-preprocessor": "^5.0.1",
         "nightwatch": "^0.9.16",
-        "node-sauce-connect": "^4.4.91",
         "rollup": "^0.51.5",
         "rollup-plugin-commonjs": "^8.2.1",
         "rollup-plugin-node-resolve": "^3.0.0",
         "rollup-plugin-uglify": "^2.0.1",
         "saucelabs": "^1.4.0",
-        "selenium-download": "^2.0.10"
+        "selenium-download": "^2.0.10",
+        "surge": "^0.19.0"
     }
 }
