--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "dist/time.js",
     "module": "src/index.js",
     "scripts": {
-        "postinstall": "node e2e/nightwatch.conf.js",
+        "postinstall": "npm run install:css && node e2e/nightwatch.conf.js",
+        "install:css": "rm -rf node_modules/css && ln -s ../src/utils/css node_modules/css",
         "test": "karma start",
         "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
         "dev": "./node_modules/rollup/bin/rollup -c -w",
@@ -17,7 +18,6 @@
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
-        "css": "file:src/utils/css",
         "fastdom": "^1.0.6",
         "lodash": "^3.10.1",
         "minno-sequencer": "github:minnojs/minno-sequencer",
