fix(tests): don't run test runner, we don't currently have any tests...

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "module": "src/index.js",
     "scripts": {
         "postinstall": "node e2e/nightwatch.conf.js",
-        "test": "karma start",
+        "test": "echo \"Not running any tests currently\"",
         "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
         "dev": "./node_modules/rollup/bin/rollup -c -w",
         "e2e:debug": "node ./e2e/debug.js",
