--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "minno-time",
     "version": "0.5.0",
-    "description": "",
+    "description": "A free tool for creating reaction time tasks",
     "main": "dist/time.js",
     "module": "src/index.js",
     "scripts": {
-        "postinstall": "node e2e/nightwatch.conf.js",
         "test": "echo \"Not running any tests currently\"",
         "build": "cp src/time.css dist/time.css && ./node_modules/rollup/bin/rollup -c",
         "dev": "./node_modules/rollup/bin/rollup -c -w",
