--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js: 6
 script:
     - npm run build
-    - npm test:ci
+    - npm run test:ci
     - npm run surge
     - npm run e2e:sauce
