--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "rollup-plugin-uglify": "^2.0.1",
         "saucelabs": "^1.4.0",
         "selenium-download": "^2.0.10",
+        "simulant": "^0.2.2",
         "surge": "^0.19.0"
     }
 }
