test(stimuli): location tests

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "jasmine": "^2.8.0",
     "jasmine-ajax": "^3.3.1",
     "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-rollup-preprocessor": "^5.0.1",
     "nightwatch": "^0.9.16",
     "rollup": "^0.51.5",
