--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.17.14",
     "minno-css": "^1.0.0",
     "minno-sequencer": "github:minnojs/minno-sequencer",
-    "mithril-stream": "^1.1.0"
+    "mithril-stream": "^1.1.0",
+    "promise-polyfill": "^8.2.0"
   },
   "devDependencies": {
     "cross-env": "^5.1.1",
